# xllm

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_zh.md  MANIFEST.in  NOTICE_Third_Party.md  README.md  README_zh.md  RELEASE.md  env.py  mkdocs_en.yml  mkdocs_zh.yml  setup.py  utils.py  vcpkg.json
xllm/: CMakeLists.txt  __init__.py  launch_xllm.py  xllm.cpp
xllm/api_service/: CMakeLists.txt  anthropic_protocol_test.cpp  anthropic_service_impl.cpp  anthropic_service_impl.h  anthropic_service_test.cpp  api_service.cpp  api_service.h  api_service_impl.h  call.cpp  call.h  chat_json_parser.cpp  chat_json_parser.h  chat_json_parser_test.cpp  chat_service_impl.cpp  chat_service_impl.h  completion_service_impl.cpp  completion_service_impl.h  embedding_output_builder.cpp  embedding_output_builder.h  embedding_service_impl.cpp  embedding_service_impl.h  image_generation_service_impl.cpp  image_generation_service_impl.h  mm_service_utils.h  models_service_impl.cpp  models_service_impl.h  non_stream_call.h  openai_service_test.cpp  qwen3_rerank_service_impl.cpp  qwen3_rerank_service_impl.h  rec_completion_service_impl.cpp  rec_completion_service_impl.h  rerank_service_impl.cpp  rerank_service_impl.h  sample_service_impl.cpp  sample_service_impl.h  sample_service_impl_test.cpp  service_impl_factory.h  stream_call.h  stream_output_parser.cpp  (+3 more)
xllm/c_api/: README.md  default.h  llm.h  rec.h  types.h
xllm/c_api/examples/: simple_llm_chat_completions.cpp  simple_llm_completions.cpp  simple_rec_completions.cpp  simple_rec_multimodal_completions.cpp  stress_rec_multimodal_completions.cpp
xllm/c_api/internal/: helper.cpp  helper.h  llm.cpp  rec.cpp
xllm/c_api/tools/: install.sh
xllm/cc_api/: README.md  examples.cpp  install.sh  internal.h  llm.cpp  llm.h  macros.h  types.h
xllm/cc_api/examples/: CMakeLists.txt  multiple_llm_instances.cpp  service_request.cpp  service_request.h  single_llm_instance.cpp  start-llm-instance.sh
xllm/compiler/: __init__.py  tilelang_launcher.py
xllm/compiler/tilelang/: __init__.py  bootstrap.py  tilelang_ascend_install.py
xllm/core/: CMakeLists.txt
xllm/core/common/: CMakeLists.txt  constants.h  device_memory.cpp  device_memory.h  device_monitor.cpp  device_monitor.h  etcd_client.cpp  etcd_client.h  etcd_utils.h  global_flags.cpp  global_flags.h  health_check_manager.h  help_formatter.h  instance_name.h  interruption_bus.h  layer_synchronizer.cpp  layer_synchronizer.h  macros.h  message.h  metrics.cpp  metrics.h  mspti_helper.cpp  mspti_helper.h  options.cpp  options.h  rate_limiter.cpp  rate_limiter.h  rate_limiter_test.cpp  rec_model_utils.h  types.h  version_singleton.h
xllm/core/distributed_runtime/: CMakeLists.txt  collective_service.cpp  collective_service.h  comm_channel.cpp  comm_channel.h  disagg_pd_service.cpp  disagg_pd_service.h  disagg_pd_service_impl.cpp  disagg_pd_service_impl.h  dist_manager.cpp  dist_manager.h  dit_engine.cpp  dit_engine.h  dit_master.cpp  dit_master.h  engine.h  llm_engine.cpp  llm_engine.h  llm_master.cpp  llm_master.h  master.cpp  master.h  pd_ooc_service.cpp  pd_ooc_service.h  pd_ooc_service_impl.cpp  pd_ooc_service_impl.h  rec_engine.cpp  rec_engine.h  rec_master.cpp  rec_master.h  remote_worker.cpp  remote_worker.h  shm_channel.cpp  shm_channel.h  speculative_engine.cpp  speculative_engine.h  vlm_engine.cpp  vlm_engine.h  vlm_master.cpp  vlm_master.h  (+5 more)
xllm/core/framework/: CMakeLists.txt  context.h  dit_model_context.cpp  (+18 more)
xllm/function_call/: CMakeLists.txt  base_format_detector.cpp  base_format_detector.h  core_types.h  deepseekv32_detector.cpp  deepseekv32_detector.h  deepseekv32_detector_test.cpp  deepseekv3_detector.cpp  deepseekv3_detector.h  deepseekv3_detector_test.cpp  function_call.h  function_call_parser.cpp  function_call_parser.h  glm45_detector.cpp  glm45_detector.h  glm45_detector_test.cpp  glm47_detector.cpp  glm47_detector.h  glm47_detector_test.cpp  kimik2_detector.cpp  kimik2_detector.h  kimik2_detector_test.cpp  qwen25_detector.cpp  qwen25_detector.h  qwen25_detector_test.cpp  qwen3_coder_detector.cpp  qwen3_coder_detector.h  qwen3_coder_detector_test.cpp  utils.cpp  utils.h
xllm/models/: CMakeLists.txt  autoencoder_kl.h  clip_text_model.h  deepseek_v2.h  deepseek_v2_mtp.h  deepseek_v3.h  kimi_k2.h  llama.h  llama3.h  minicpmv.h  model_registry.cpp  model_registry.h  models.h  qwen2.h  qwen2_5_vl.h  qwen3.h  qwen3_embedding.h  qwen3_moe.h  qwen_base.h  t5_encoder.h
xllm/parser/: CMakeLists.txt  detector_registry.cpp  detector_registry.h  reasoning_detector.cpp  reasoning_detector.h  reasoning_parser.cpp  reasoning_parser.h
xllm/processors/: CMakeLists.txt  clip_image_processor.cpp  clip_image_processor.h  clip_input_processor.cpp  clip_input_processor.h  glm4v_image_processor.cpp  glm4v_image_processor.h  glm4v_input_processor.cpp  glm4v_input_processor.h  image_processor.cpp  image_processor.h  input_processor.h  minicpmv_image_processor.cpp  minicpmv_image_processor.h  minicpmv_input_processor.cpp  minicpmv_input_processor.h  pywarpper_image_processor.cpp  pywarpper_image_processor.h  qwen2_vl_image_processor.cpp  qwen2_vl_image_processor.h  qwen2_vl_input_processor.cpp  qwen2_vl_input_processor.h  qwen3_vl_image_processor.cpp  qwen3_vl_image_processor.h  qwen3_vl_input_processor.cpp  qwen3_vl_input_processor.h  siglip_image_processor.cpp  siglip_image_processor.h
xllm/proto/: CMakeLists.txt  anthropic.proto  chat.proto  common.proto  completion.proto  disagg_pd.proto  embedding.proto  embedding_data.proto  image_generation.proto  models.proto  mooncake_transfer_engine.proto  multimodal.proto  rec.proto  rerank.proto  sample.proto  tensor.proto  worker.proto  xllm_service.proto  xservice.proto  xtensor_dist.proto  xtensor_manager.proto
xllm/pybind/: CMakeLists.txt  args.py  bind.cpp  embedding.py  errors.py  llm.py  mm_utils.py  multimodal.py  params.py  util.py  vlm.py
xllm/server/: CMakeLists.txt  health_reporter.h  xllm_server.cpp  xllm_server.h  xllm_server_registry.cpp  xllm_server_registry.h
(+1380 files in other folders)
